Fix BiquadFilterNode's lowpass filter https://bugs.webkit.org/show_bug.cgi?id=215381

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Rebaseline WPT test now that more checks are passing.

* web-platform-tests/webaudio/the-audio-api/the-biquadfilternode-interface/biquad-lowpass-expected.txt:

Source/WebCore:

Fix BiquadFilterNode's lowpass filter as it was causing us to fail a WPT test:
- https://www.w3.org/TR/webaudio/#dom-biquadfiltertype-lowpass

No new tests, rebaselined existing test.

* Modules/webaudio/BiquadProcessor.cpp:
(WebCore::BiquadProcessor::BiquadProcessor):
* platform/audio/Biquad.cpp:
(WebCore::Biquad::setLowpassParams):

LayoutTests:

* webaudio/biquad-lowpass.html:
Update test to work in other browsers (which do not support prefixed API).

* webaudio/resources/biquad-testing.js:
(createLowpassFilter):
Update test to reflect behavior change. Note that this test was failing in both
Chrome and Firefox before I updated the test. Now that I updated the test to
match the new behavior we implemented, it passes in both Chrome and Firefox.


Canonical link: https://commits.webkit.org/228163@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265517 268f45cc-cd09-0410-ab3c-d52691b4dbfc