LayoutTests/webaudio/resources/biquad-testing.js
@@ -46,28 +46,24 @@ function createLowpassFilter(freq, q, gain) {
     if (freq == 1) {
         // The formula below works, except for roundoff.  When freq = 1,
         // the filter is just a wire, so hardwire the coefficients.
-        b0 = 1;
-        b1 = 0;
-        b2 = 0;
-        a1 = 0;
-        a2 = 0;
+        return {b0: 1, b1: 0, b2: 0, a1: 0, a2: 0};
     } else {
-        var g = Math.pow(10, q / 20);
-        var d = Math.sqrt((4 - Math.sqrt(16 - 16 / (g * g))) / 2);
+        var resonance = Math.pow(10, q / 20);
         var theta = Math.PI * freq;
-        var sn = d * Math.sin(theta) / 2;
-        var beta = 0.5 * (1 - sn) / (1 + sn);
-        var gamma = (0.5 + beta) * Math.cos(theta);
-        var alpha = 0.25 * (0.5 + beta - gamma);
+        var alpha = Math.sin(theta) / (2 * resonance);
+        var cosw = Math.cos(theta);
+        var beta = (1 - cosw) / 2;
 
-        b0 = 2 * alpha;
-        b1 = 4 * alpha;
-        b2 = 2 * alpha;
-        a1 = 2 * (-gamma);
-        a2 = 2 * beta;
+        b0 = beta;
+        b1 = 2 * beta;
+        b2 = beta;
+
+        a0 = 1 + alpha;
+        a1 = -2 * cosw;
+        a2 = 1 - alpha;
+
+        return normalizeFilterCoefficients(b0, b1, b2, a0, a1, a2);
     }
-
-    return {b0 : b0, b1 : b1, b2 : b2, a1 : a1, a2 : a2};
 }
 
 function createHighpassFilter(freq, q, gain) {
